# hqdata

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: add-source.md  ricequant-doc-index.md  tushare-doc-index.md
.claude/hooks/: check-consistency.sh
hqdata/: __init__.py  api.py  calendar.py  cli.py  config.py
hqdata/sources/: __init__.py  base.py  ricequant.py  tushare.py
tests/: __init__.py  test_calendar.py  test_cli.py  test_package_api.py  test_ricequant.py  test_tushare.py
